--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "PWA240-420",
+    "default": "pwa240-214",
     "deploy": "PWA240-420",
     "pwa": "pwa240-214"
   },
